fix: ng update to 14

--- a/src/app/home/components/w-container/w-container.component.html
+++ b/src/app/home/components/w-container/w-container.component.html
@@ -49,8 +49,7 @@
             [datasets]="dateSets"
             [labels]="dataLabels"
             [options]="lineChartOptions"
-            [colors]="lineChartColors"
-            [chartType]="'line'"
+            [type]="'line'"
           >
           </canvas>
         </div>
